bugfix verkeerde kleur overflow gradient

--- a/meldingen.css
+++ b/meldingen.css
@@ -151,7 +151,7 @@ h1 {
 	right: 0px;
 	bottom: 0px;
 	height: 120px;
-	background: linear-gradient(rgba(20,36,31,0), rgba(20,36,31,0.75), rgba(20,36,31,1));
+	background: linear-gradient(rgba(20,26,31,0), rgba(20,26,31,0.75), rgba(20,26,31,1));
 }
 
 #spinner {
